--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "array-difference": "0.0.1",
     "cheerio": "^0.22.0",
-    "request": "^2.79.0",
-    "underscore": "^1.8.3"
+    "lodash": "^4.17.4",
+    "request": "^2.79.0"
   }
 }
